# web_app

./: .dockerignore  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  nginx.conf  nginx.conf.template
.github/workflows/: build-docker.yml  cleanup-cache.yml  test-build.yml
rust/: .gitignore  Cargo.toml  Makefile  README.md
rust/.cargo/: config.toml
rust/scripts/: precision_analysis.js  wasm_binary_benchmark.js  wasm_precompute_bench.js
rust/src/: gridless.rs  gridless_core.rs  img.rs  lib.rs  main.rs  sphere.rs  sphere_plot.rs  tart_api.rs  tart_obs.rs  utils.rs
rust/src/cli/: args.rs  error.rs  mod.rs  output.rs
rust/src/svg/: mod.rs
rust/src/template/: hemisphere_template.rs  mod.rs
rust/src/wasm/: bindings.rs  cache.rs  gridless_simd.rs  img_simd.rs  mod.rs  simd_utils.rs  sphere_plot_simd.rs  sphere_simd.rs  tart_obs_simd.rs  utils.rs
rust/templates/: hemisphere_plot.stpl  sphere_plot.stpl  svg_base.stpl
tart-viewer/: .gitignore  HDF5_MODEL_README.md  Makefile  README.md  compose.yaml  eslint.config.js  index.html  nginx_proxy.conf  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  puppet.js  vite.config.mjs
tart-viewer/src/: App.vue  main.js
tart-viewer/src/components/: AppFooter.vue  ArrayLayout.vue  Baseline.vue  ConfigTile.vue  FpgaStatus.vue  GainPhase.vue  GeneralInfo.vue  HdfViewer.vue  Home.vue  LoginField.vue  RadioSpectrum.vue  RecentData.vue  S3Files.vue  SimpleView.vue  SvgThreejs.vue  Synthesis.vue  TelescopeModeChange.vue  Threejs3D.vue  TreeshakenLineChart.vue  UPlotChart.vue  VideoRecordingButton.vue  VideoRecordingControls.vue
tart-viewer/src/layouts/: default.vue
tart-vuer/: package.json  pnpm-lock.yaml
tart-vuer/src/: App.vue  store.js
withoutBundler/: index.html
(+24 files in other folders)
