[package]
name = "gridless"
version = "0.3.0"
authors = ["Tim Molteno <tim@elec.ac.nz>"]
edition = "2024"

[dependencies]
cdshealpix = "0.7"
ndarray = { version = "0.16", features = ["rayon"] }
num = "0.4"
rayon = "1.8"
libm = "0.2"
ryu = "1.0"

# For data handling
chrono = { version = "0.4", features = ["serde"] } # To parse Dates

# CLI dependencies (optional)
clap = { version = "4.4", features = ["derive"], optional = true }

# For templating
sailfish = "0.9"
thiserror = "2.0"

# For requests
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_derive = "1.0"
serde_json = "1.0"
bitcode = { version = "0.6", features = ["serde"] }


# reqwest="^0.11"

wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
js-sys = "0.3"
itoa = "1.0.15"

# Explicitly configure web-sys for browser compatibility
[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "HtmlElement", "Window"]


[[bin]]
name = "gridless"
path = "src/main.rs"


[lib]
name = "gridlesslib"
path = "src/lib.rs"

crate-type = ["cdylib", "rlib"]

[features]
default = ["fast-math", "cli"]
nightly = ["simd", "fast-math"]
fast-math = []
# Browser-specific feature to exclude Node.js dependencies
browser = []
# Enable WebAssembly SIMD optimizations
simd = []
# CLI functionality
cli = ["clap"]

[dev-dependencies]
rand = "0.9"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug-assertions = false
incremental = false

# Profile for profiling with debug info
[profile.profiling]
inherits = "release"
debug = true
